kubernetes/kustomize/application/myapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-service
  namespace: workbench
spec:
  selector:
    app: myapp
  ports:
    - name: app-port
      protocol: TCP
      port: 60000
      targetPort: 50000
